--- a/app/src/main/res/layout/fragment_vehicles.xml
+++ b/app/src/main/res/layout/fragment_vehicles.xml
@@ -142,6 +142,20 @@
                         android:textSize="18sp"
                         tools:ignore="RtlSymmetry" />
 
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="125dp"
+                        android:layout_height="20dp"
+                        android:id="@+id/updateLocation"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginVertical="12dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/edit_text_border"
+                        android:gravity="center"
+                        android:text="Update Location"
+                        android:textSize="12sp"
+                        android:textColor="@color/primary">
+                    </androidx.appcompat.widget.AppCompatButton>
+
 
                     <fragment
                         android:id="@+id/google_map"
